# crab

./: CMakeLists.txt  README.md  simple.crab
cli/: cli.c  cli.h
compiler/: compiler.c  compiler.h
include/: common.h  unicodeUtf8.c  unicodeUtf8.h  utils.c  utils.h
object/: class.c  class.h  mate_obj.c  meta_obj.h  obj_fn.c  obj_fn.h  obj_list.c  obj_list.h  obj_map.c  obj_map.h  obj_range.c  obj_range.h  obj_string.c  obj_string.h  obj_thread.c  obj_thread.h  object_header.c  object_header.h
parser/: parser.c  parser.h  token.h
vm/: core.c  core.h  opcode.inc  vm.c  vm.h
